k8s/manifests/admin-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  labels:
    app: admin-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-server
  strategy: {}
  template:
    metadata:
      labels:
        app: admin-server
    spec:
      containers:
        - image: springcommunity/spring-petclinic-admin-server
          name: admin-server
          ports:
            - containerPort: 9090
              hostPort: 9090
              protocol: TCP
          resources:
            limits:
              memory: "536870912"
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: admin-server
  name: admin-server
spec:
  ports:
    - name: "9090"
      port: 9090
      targetPort: 9090
  selector:
    app: admin-server
status:
  loadBalancer: {}
