k8s/manifests/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  strategy: {}
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - image: zzouhal/spring-petclinic-cloud-api-gateway
          name: api-gateway
          ports:
            - containerPort: 8080
              #hostPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-gateway
  name: api-gateway
spec:
  #type: LoadBalancer
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: api-gateway
status:
  loadBalancer: {}
