k8s/manifests/config-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: config-server
  name: config-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  strategy: {}
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - image: springcommunity/spring-petclinic-config-server
          livenessProbe:
            exec:
              command:
                - curl
                - -I
                - http://config-server:8888
            failureThreshold: 10
            periodSeconds: 5
            timeoutSeconds: 5
          name: config-server
          ports:
            - containerPort: 8888
              #hostPort: 8888
              protocol: TCP
          resources:
            limits:
              memory: "536870912"
      restartPolicy: Always
status: {}


---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: config-server
  name: config-server
spec:
  ports:
    - name: "8888"
      port: 8888
      targetPort: 8888
  selector:
    app: config-server
status:
  loadBalancer: {}
