k8s/manifests/customers-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: customers-service
  name: customers-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customers-service
  strategy: {}
  template:
    metadata:
      labels:
        app: customers-service
    spec:
      containers:
        - image: springcommunity/spring-petclinic-customers-service
          name: customers-service
          ports:
            - containerPort: 8081
              hostPort: 8081
              protocol: TCP
          resources:
            limits:
              memory: "536870912"
      restartPolicy: Always
status: {}


---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: customers-service
  name: customers-service
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    app: customers-service
status:
  loadBalancer: {}
