k8s/manifests/db-deployment.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-vets-petclinic
spec:
  serviceName: "mysql-vets-service"
  replicas: 1
  selector:
    matchLabels:
      app: mysql-vets-petclinic
  template:
    metadata:
      labels:
        app: mysql-vets-petclinic
    spec:
      containers:
      - name: mysql-vets
        image: mysql:latest
        ports:
        - containerPort: 3306
          name: mysql-vets
        volumeMounts:
        - name: mysql-petclinic-data
          mountPath: /var/lib/mysql

      volumes:
      - name: mysql-petclinic-data
        persistentVolumeClaim:
          claimName: mysql-pvc

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-visits-petclinic
spec:
  serviceName: "mysql-visits-service"
  replicas: 1
  selector:
    matchLabels:
      app: mysql-visits-petclinic
  template:
    metadata:
      labels:
        app: mysql-visits-petclinic
    spec:
      containers:
      - name: mysql-visits
        image: mysql:latest
        ports:
        - containerPort: 3306
          name: mysql-visits
        volumeMounts:
        - name: mysql-petclinic-data
          mountPath: /var/lib/mysql

      volumes:
      - name: mysql-petclinic-data
        persistentVolumeClaim:
          claimName: mysql-pvc

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-customers-petclinic
spec:
  serviceName: "mysql-customers-service"
  replicas: 1
  selector:
    matchLabels:
      app: mysql-customers-petclinic
  template:
    metadata:
      labels:
        app: mysql-customers-petclinic
    spec:
      containers:
      - name: mysql-customers
        image: mysql:latest
        ports:
        - containerPort: 3306
          name: mysql-customers
        volumeMounts:
        - name: mysql-petclinic-data
          mountPath: /var/lib/mysql

      volumes:
      - name: mysql-petclinic-data
        persistentVolumeClaim:
          claimName: mysql-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: mysql-vets-service
spec:
  selector:
    app: mysql-vets-petclinic
  ports:
  - name: mysql-vets
    port: 3306
    targetPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: mysql-visits-service
spec:
  selector:
    app: mysql-visits-petclinic
  ports:
  - name: mysql-visits
    port: 3306
    targetPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: mysql-customers-service
spec:
  selector:
    app: mysql-customers-petclinic
  ports:
  - name: mysql-customers
    port: 3306
    targetPort: 3306
