k8s/manifests/discovery-server-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: discovery-server
  name: discovery-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
        - image: springcommunity/spring-petclinic-discovery-server
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://discovery-server:8761
            failureThreshold: 10
            periodSeconds: 5
            timeoutSeconds: 3
          name: discovery-server
          ports:
            - containerPort: 8761
              #hostPort: 8761
              protocol: TCP
          resources:
            limits:
              memory: "536870912"
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: discovery-server
  name: discovery-server
spec:
  ports:
    - name: "8761"
      port: 8761
      targetPort: 8761
  selector:
    app: discovery-server
status:
  loadBalancer: {}
