k8s/manifests/vets-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vets-service
  name: vets-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vets-service
  strategy: {}
  template:
    metadata:
      labels:
        app: vets-service
    spec:
      containers:
        - image: zzouhal/spring-petclinic-cloud-vets-service
          name: vets-service
          ports:
            - containerPort: 8083
              #hostPort: 8083
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: vets-service
  name: vets-service
spec:
  ports:
    - name: "8083"
      port: 8083
      targetPort: 8083
  selector:
    app: vets-service
status:
  loadBalancer: {}
