k8s/manifests/visits-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: visits-service
  name: visits-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visits-service
  strategy: {}
  template:
    metadata:
      labels:
        app: visits-service
    spec:
      containers:
        - image: springcommunity/spring-petclinic-visits-service
          name: visits-service
          ports:
            - containerPort: 8082
              hostPort: 8082
              protocol: TCP
          resources:
            limits:
              memory: "536870912"
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: visits-service
  name: visits-service
spec:
  ports:
    - name: "8082"
      port: 8082
      targetPort: 8082
  selector:
    app: visits-service
status:
  loadBalancer: {}
